--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "personal",
+	"name": "www",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -15,33 +15,33 @@
 		"deploy": "bun run build && wrangler pages deploy"
 	},
 	"devDependencies": {
-		"@iconify-json/ph": "^1.1.13",
-		"@playwright/test": "^1.44.1",
-		"@sveltejs/adapter-static": "^3.0.2",
-		"@sveltejs/enhanced-img": "^0.3.0",
-		"@sveltejs/kit": "^2.5.17",
-		"@sveltejs/vite-plugin-svelte": "^3.1.1",
-		"@types/eslint": "^8.56.10",
-		"eslint": "^9.5.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.40.0",
-		"mdsvex": "^0.11.2",
-		"prettier": "^3.3.2",
-		"prettier-plugin-svelte": "^3.2.5",
-		"sass": "^1.77.6",
-		"svelte": "^4.2.18",
-		"unplugin-icons": "^0.19.0",
-		"vite": "^5.3.1",
-		"vitest": "^1.6.0"
+		"@iconify-json/ph": "^1.2.2",
+		"@playwright/test": "^1.50.1",
+		"@sveltejs/adapter-static": "^3.0.8",
+		"@sveltejs/enhanced-img": "^0.4.4",
+		"@sveltejs/kit": "^2.17.1",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
+		"@types/eslint": "^9.6.1",
+		"eslint": "^9.19.0",
+		"eslint-config-prettier": "^10.0.1",
+		"eslint-plugin-svelte": "^2.46.1",
+		"mdsvex": "^0.12.3",
+		"prettier": "^3.4.2",
+		"prettier-plugin-svelte": "^3.3.3",
+		"sass": "^1.83.4",
+		"svelte": "^5.19.7",
+		"unplugin-icons": "^22.0.0",
+		"vite": "^6.0.11",
+		"vitest": "^3.0.5"
 	},
 	"type": "module",
 	"dependencies": {
-		"@fontsource-variable/space-grotesk": "^5.0.18",
-		"@fontsource/space-mono": "^5.0.20",
-		"embla-carousel-svelte": "^8.1.5",
-		"iconify-icon": "^2.1.0",
+		"@fontsource-variable/space-grotesk": "^5.1.1",
+		"@fontsource/space-mono": "^5.1.2",
+		"embla-carousel-svelte": "^8.5.2",
+		"iconify-icon": "^2.3.0",
 		"lottie-web": "^5.12.2",
-		"shiki": "^1.9.0",
-		"wrangler": "^3.61.0"
+		"shiki": "^2.2.0",
+		"wrangler": "^3.107.2"
 	}
 }
